--- a/src/main/webapp/user/registrierung.xhtml
+++ b/src/main/webapp/user/registrierung.xhtml
@@ -99,7 +99,7 @@
                <div align="center"> 
                  <h:commandButton class="inputButton" value = "#{msg['weiter']}"
                 
-                              action="zahlungsabwicklung" /> 
+                              action="registrierungUebersicht" /> 
                                  </div>
 
  
