Aufräumarbeiten: Frontend <f:convertDateTime> raus

--- a/src/main/webapp/user/ziehungenAnzeigen.xhtml
+++ b/src/main/webapp/user/ziehungenAnzeigen.xhtml
@@ -23,7 +23,8 @@
                    
                     <p:column headerText="#{msg['ziehungsdatum']}:">
                         <p:outputLabel value="#{ziehung.ziehungsdatum}"  >
-                            <f:convertDateTime/>
+                            <!-- nicht mehr fuer LocalDate
+                             <f:convertDateTime -->
                         </p:outputLabel>
                     </p:column>
                     
